Make jacktrip installable with meson

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('jacktrip', 'cpp')
+project('jacktrip', 'cpp', version: '1.2')
 qt5 = import('qt5')
 qt5_dep = dependency('qt5', modules: ['Core', 'Network'])
 jack_dep = dependency('jack')
@@ -42,4 +42,4 @@ src = ['src/DataProtocol.cpp',
 	'src/AudioInterface.cpp',
 	'src/JackAudioInterface.cpp']
 
-executable('jacktrip', src, moc_files, dependencies: [qt5_dep, jack_dep, rtaudio_dep], cpp_args: defines )
+executable('jacktrip', src, moc_files, dependencies: [qt5_dep, jack_dep, rtaudio_dep], cpp_args: defines, install: true )
