Enable thread support for meson build

--- a/meson.build
+++ b/meson.build
@@ -3,6 +3,7 @@ qt5 = import('qt5')
 qt5_dep = dependency('qt5', modules: ['Core', 'Network'])
 jack_dep = dependency('jack')
 rtaudio_dep = dependency('rtaudio')
+thread_dep = dependency('threads')
 
 defines = []
 if host_machine.system() == 'linux'
@@ -42,4 +43,4 @@ src = ['src/DataProtocol.cpp',
 	'src/AudioInterface.cpp',
 	'src/JackAudioInterface.cpp']
 
-executable('jacktrip', src, moc_files, dependencies: [qt5_dep, jack_dep, rtaudio_dep], cpp_args: defines, install: true )
+executable('jacktrip', src, moc_files, dependencies: [qt5_dep, jack_dep, rtaudio_dep, thread_dep], cpp_args: defines, install: true )
