tweak limiter - not hearing any clipping during a loopback feedback howl now

--- a/faust-src/Makefile
+++ b/faust-src/Makefile
@@ -97,6 +97,9 @@ h headers :
 	install -d headersdir
 	$(MAKE) DEST='headersdir/' ARCH='faust2header.cpp' -f Makefile.headers
 
+ih hi installheaders : headers
+	install headersdir/*.h ../src/
+
 clean :
 	-rm -rf alsagtkdir jackgtkdir alsaqtdir jackqtdir vecalsagtkdir vecjackgtkdir ladspadir jackwxdir ossgtkdir osswxdir pagtkdir pawxdir moduledir bundledir mspdir vstdir benchdir sndfiledir plotdir benchdir supercolliderdir puredatadir qdir plotdir jackconsoledir matlabplotdir *-ps *-svg headersdir
 
