--- a/faust-src/Makefile.headers
+++ b/faust-src/Makefile.headers
@@ -3,12 +3,12 @@ headers  := $(addprefix $(DEST), $(dspsrc:.dsp=.h))
 
 all :  $(headers)
 
-# inline all included headers: faust -i -inpl $(VEC) -cn $(<:.dsp=) -a $(ARCH) $< -o $(DEST)$(<:.dsp=).cpp
-
 $(DEST)%.h : %.dsp
-	faust -inpl $(VEC) -cn $(<:.dsp=) -a $(ARCH) $< -o $(DEST)$(<:.dsp=).cpp
-	(cat $(@:.h=).cpp | sed -e /template/d | sed -e s/mydsp/$(<:.dsp=)/g) > $@
+	faust -i -inpl $(VEC) -cn $(<:.dsp=) -a $(ARCH) $< -o $(DEST)$(<:.dsp=).cpp
+	(cat $(@:.h=).cpp | sed -e s/mydsp/$(<:.dsp=)/g) > $@
 	/bin/rm $(@:.h=).cpp
+
+# Probably needed for headers after the first: (cat $(@:.h=).cpp | sed -e /template/d | sed -e s/mydsp/$(<:.dsp=)/g) > $@
 
 clean :
 	rm -f $(DEST)
