--- a/faust-src/Makefile.headers
+++ b/faust-src/Makefile.headers
@@ -4,9 +4,9 @@ headers  := $(addprefix $(DEST), $(dspsrc:.dsp=.h))
 all :  $(headers)
 
 $(DEST)%.h : %.dsp
-	faust -i -inpl $(VEC) -cn $(<:.dsp=) -a $(ARCH) $< -o $(DEST)$(<:.dsp=).cpp
-	(cat $(@:.h=).cpp | sed -e s/mydsp/$(<:.dsp=)/g) > $@
-	/bin/rm $(@:.h=).cpp
+	   faust -i -inpl $(VEC) -cn $(<:.dsp=) -a $(ARCH) $< -o $(DEST)$(<:.dsp=).h
+	   #(cat $(@:.h=).cpp | sed -e s/mydsp/$(<:.dsp=)/g) > $@
+	   #/bin/rm $(@:.h=).cpp
 
 # Probably needed for headers after the first: (cat $(@:.h=).cpp | sed -e /template/d | sed -e s/mydsp/$(<:.dsp=)/g) > $@
 
