--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ branches:
 
 env:
   global:
-  - PKGS_LINUX=qt5-default qttools5-dev-tools jack-audio-connection-kit-devel rtaudio
-  - PKGS_OSX=jack qt rt-audio
+  - PKGS_LINUX="qt5-default qttools5-dev-tools libjack-dev librtaudio-dev"
+  - PKGS_OSX="jack qt rt-audio"
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update; sudo apt-get install $PKGS_LINUX; fi
