--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ addons:
 before_install:
   # linux: use gcc-6
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CC="gcc-6"; export CXX="g++-6"; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++; fi
   - gcc -v && g++ -v
   # mac: workaround for homebrew-installed headers
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export C_INCLUDE_PATH="/usr/local/include"; fi
