--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,9 @@ addons:
 script: 
   # linux: use gcc-6
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CC="gcc-6"; export CXX="g++-6"; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/gcc-6 /usr/bin/gcc; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/g++-6 /usr/bin/g++; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PATH="/usr/local/bin:$PATH"; fi
   # mac: workaround for homebrew-installed headers
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export C_INCLUDE_PATH="/usr/local/include"; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export CPLUS_INCLUDE_PATH="/usr/local/include"; fi
