--- a/.travis.yml
+++ b/.travis.yml
@@ -30,15 +30,17 @@ addons:
       - rt-audio
 
 script: 
-  # linux: use gcc-6
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CC="gcc-6"; export CXX="g++-6"; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export PATH="/usr/local/bin:$PATH"; fi
+  # linux: force gcc-6
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then 
+      sudo update-alternatives --remove-all gcc
+      sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 90 --slave /usr/bin/g++ g++ /usr/bin/g++-6
+    fi
   # mac: workaround for homebrew-installed headers
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export C_INCLUDE_PATH="/usr/local/include"; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export CPLUS_INCLUDE_PATH="/usr/local/include"; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export LIBRARY_PATH="/usr/local/lib"; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then 
+      export C_INCLUDE_PATH="/usr/local/include"
+      export CPLUS_INCLUDE_PATH="/usr/local/include"
+      export LIBRARY_PATH="/usr/local/lib";
+    fi
   # mac: workaround for homebrew qmake not being symlinked into $PATH
   # see https://stackoverflow.com/questions/48847505/why-cant-i-use-qmake-on-mac-after-installing-it
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH="/usr/local/opt/qt/bin:$PATH"; fi
