--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ addons:
       - librtaudio-dev
 
 before_script:
-  # manually install brew packages as homebrew is broken in the default osx image
+  # manually install brew packages as addon: homebrew is broken in the default osx image
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then 
-      brew install $PKGS_OSX
+      brew install $PKGS_OSX;
     fi
   # mac: workaround for homebrew qmake not being symlinked into $PATH
   # see https://stackoverflow.com/questions/48847505/why-cant-i-use-qmake-on-mac-after-installing-it
