Fixes for windows
Added WIN32_LEAN_AND_MEAN to project defines to fix windows.h before winsock2.h warning.
Moved to using raw BSD and winsock functions in the receive code of the UdpDataProtocol. (No more QUdpSocket.) Resolves a sigsegv that was occurring when running from the GUI in windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   add_compile_definitions (__MAC_OSX__)
   include_directories(/usr/local/include)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  add_compile_definitions(__WIN_32__  _WIN32_WINNT=0x0600)
+  add_compile_definitions(__WIN_32__  _WIN32_WINNT=0x0600 WIN32_LEAN_AND_MEAN)
   include_directories("C:/Program Files (x86)/Jack/includes")
   set (CMAKE_PREFIX_PATH "C:/Qt/5.15.0/mingw81_64/lib/cmake")
 endif ()
