--- a/os x/QJackTrip.app_template/Contents/Info.plist
+++ b/os x/QJackTrip.app_template/Contents/Info.plist
@@ -44,9 +44,11 @@
 	<string>11E503a</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.13</string>
-        <key>NSHighResolutionCapable</key>
-        <true/>
+	<key>NSHighResolutionCapable</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 Juan-Pablo Caceres, Chris Chafe, Aaron Wyatt, et al. All rights reserved.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires microphone access to allow the jack server to capture audio.</string>
 </dict>
 </plist>
