--- a/subprojects/libjacktrip/include/meson.build
+++ b/subprojects/libjacktrip/include/meson.build
@@ -1,1 +1,12 @@
-install_headers('JackTrip.h','UdpHubListener.h')
+moc_h = ['DataProtocol.h',
+	'JackTrip.h',
+	'JackTripWorker.h',
+	'PacketHeader.h',
+	'UdpDataProtocol.h',
+	'UdpHubListener.h']
+moc_files = qt5.preprocess(moc_headers : moc_h)
+
+install_headers(['JackTrip.h',
+	'UdpHubListener.h',
+	'ProcessPlugin.h',
+	'AudioInterface.h'])
