--- a/subprojects/libjacktrip/include/meson.build
+++ b/subprojects/libjacktrip/include/meson.build
@@ -8,5 +8,11 @@ moc_files = qt5.preprocess(moc_headers : moc_h)
 
 install_headers(['JackTrip.h',
 	'UdpHubListener.h',
+	'DataProtocol.h',
 	'ProcessPlugin.h',
-	'AudioInterface.h'])
+	'AudioInterface.h',
+	'JackAudioInterface.h',
+	'PacketHeader.h',
+	'jacktrip_globals.h',
+	'RingBuffer.h',
+	'LoopBack.h'])
