Install headers in subdirectory

--- a/subprojects/libjacktrip/include/meson.build
+++ b/subprojects/libjacktrip/include/meson.build
@@ -15,4 +15,5 @@ install_headers(['JackTrip.h',
 	'PacketHeader.h',
 	'jacktrip_globals.h',
 	'RingBuffer.h',
-	'LoopBack.h'])
+	'LoopBack.h'],
+	subdir: 'jacktrip')
