--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ branches:
   
 env:
   global:
-  - PKGS_OSX="jack qt rt-audio"
+  - PKGS_OSX="jack qt python3 ninja"
   
 addons:
   apt:
@@ -23,18 +23,19 @@ addons:
       - qt5-default
       - qttools5-dev-tools
       - libjack-dev 
-      - librtaudio-dev
+      - meson
 
 before_script:
   # manually install brew packages as addon: homebrew is broken in the default osx image
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then HOMEBREW_NO_AUTO_UPDATE=1 brew install $PKGS_OSX; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then pip3 install meson; fi
   # mac: workaround for homebrew qmake not being symlinked into $PATH
   # see https://stackoverflow.com/questions/48847505/why-cant-i-use-qmake-on-mac-after-installing-it
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export PATH="/usr/local/opt/qt/bin:$PATH"; fi
 
 script: 
-  - cd src
-  - ./build
+  - meson builddir
+  - ninja -C builddir
   
 after_success:
   - echo "Success!"
