[Meson] Default to C++11 for the library too

--- a/subprojects/libjacktrip/meson.build
+++ b/subprojects/libjacktrip/meson.build
@@ -1,4 +1,5 @@
-project('libjacktrip', 'cpp', version: '1.2.1')
+project('libjacktrip', 'cpp', version: '1.2.1',
+		default_options: ['cpp_std=c++11'])
 qt5 = import('qt5')
 dependencies = [dependency('qt5', modules: ['Core', 'Network']),
 	dependency('jack'),
