Initial authentication work
Currently this is only possible under the GUI. If both the client and server support and require authentication, they can upgrade the initial TCP hub server connection to use SSL. The client can then send through a username and password along with the usual port and client name request. These are currently checked against an 'auth' file in the current working directory that has the following format for each entry:

username:passwordhash:reservedForTimeChecks

The stored password hash can be generated using "openssl passwd -6"

TODO:
Refine password storage backend. (And add ability to check against allowed usage times.)
Add command line switches to be able to use from the terminal.
Improve UI so that password entries can be added from within the program.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ set(qjacktrip_SRC
   src/Limiter.cpp
   src/Reverb.cpp
   src/Patcher.cpp
+  src/SslServer.cpp
+  src/Auth.cpp
 )
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
