Arunov/jitter buffer (#178)
* New jitter buffer and broadcast output

* Fix mixed buffer length case (merge with dev issue)

* Minor tuning for JB strategy 2 params

* Fix broadcast output interpollation issue

* Make RT priority for UDP I/O thread optional

A new command line option --usbrt (long form only) is added to allow
users enabling RT priority for UdpDataProtocol thread. The default is
off (the same behavior as the current dev/main).

* Fixed uninitialized mBroadcast in JackAudioInterface

--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,7 @@ src = ['src/DataProtocol.cpp',
 	'src/PacketHeader.cpp',
 	'src/ProcessPlugin.cpp',
 	'src/RingBuffer.cpp',
+	'src/JitterBuffer.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
 	'src/UdpHubListener.cpp',
