--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -21,6 +21,7 @@ jobs:
       - name: install dependencies for Linux
         if: runner.os == 'Linux'
         run: |
+          sudo apt-get update
           sudo apt-get install --yes libjack-dev qt5-default qt5-qmake qttools5-dev
       - name: install dependencies for macOS
         if: runner.os == 'macOS'
