Update meson.build: Warning Level 2

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('jacktrip', 'cpp', version: '1.3.0',
-		default_options: ['cpp_std=c++17'])
+		default_options: ['cpp_std=c++17','warning_level=2'])
 qt5 = import('qt5')
 cmake = import('cmake')
 
