--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -12,6 +12,8 @@ jobs:
             runs-on: ubuntu-18.04
           - name: macOS
             runs-on: macos-10.15
+          - name: Windows
+            runs-on: windows-latest
 
     env:
       SRC_PATH: ${{ github.workspace }}/src
@@ -32,6 +34,11 @@ jobs:
         run: |
           brew install qt5 jack
           brew link qt5 --force
+      - name: install dependencies for Windows
+        if: runner.os == 'Windows'
+        uses: jurplel/install-qt-action@v2
+        run: |
+          choco install jack
       - name: build
         env:
           DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
