--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -34,9 +34,11 @@ jobs:
         run: |
           brew install qt5 jack
           brew link qt5 --force
-      - name: install dependencies for Windows
+      - name: install Qt for Windows
         if: runner.os == 'Windows'
         uses: jurplel/install-qt-action@v2
+      - name: install other dependencies for Windows
+        if: runner.os == 'Windows'
         run: |
           choco install jack
       - name: build
