--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -84,14 +84,16 @@ jobs:
         env:
           DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
         run: |
-          meson $BUILD_PATH
+          meson --buildtype release $BUILD_PATH
           cd $BUILD_PATH
+          meson configure -Ddefault_library=static
           meson compile
       - name: build on Windows
         if: runner.os == 'Windows'
         run: |
-          meson setup builddir
+          meson --buildtype release builddir
           cd builddir
+          meson configure -Ddefault_library=static
           meson compile
       - name: upload artifacts
         uses: actions/upload-artifact@v2
