Use README.md as Installation instruction and INSTALL.md as Build instruction

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: JackTrip
 nav:
    - Home: index.md
-   - Installation: INSTALL.md
+   - Installation: Install.md
+   - Build: Build.md
    - Changelog: CHANGELOG.md
 theme: readthedocs
