--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - About:
     - Resources: About/Resources.md
     - Changelog: About/CHANGELOG.md
+    - License: About/License.md
 theme:
   name: material
   features:
