Fix typo in meson.build

--- a/meson.build
+++ b/meson.build
@@ -13,7 +13,7 @@ elif host_machine.system() == 'darwin'
 elif host_machine.system() == 'windows'
 	defines += '-D__WIN_32__'
 	defines += '-D_WIN32_WINNT=0x0600'
-	defines +- '-DWIN32_LEAN_AND_MEAN'
+	defines += '-DWIN32_LEAN_AND_MEAN'
 	defines += '-DNOMINMAX'
 endif
 
