Use pkgconfig for cmake on unix platforms
Still not working in windows. Also, one last attempt to fix meson on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.12)
 set(CMAKE_OSX_DEPLOYMENT_TARGET 10.13)
 project(QJackTrip)
 
@@ -6,11 +6,16 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   add_compile_definitions(__LINUX__)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   add_compile_definitions (__MAC_OSX__)
-  include_directories(/usr/local/include)
+  set (ENV{PKG_CONFIG_PATH} "/usr/local/lib/pkgconfig")
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  add_compile_definitions(__WIN_32__  _WIN32_WINNT=0x0600 WIN32_LEAN_AND_MEAN)
+  add_compile_definitions(__WIN_32__ _WIN32_WINNT=0x0600 WIN32_LEAN_AND_MEAN)
   include_directories("C:/Program Files/JACK2/include")
-  set (CMAKE_PREFIX_PATH "C:/Qt/5.15.0/mingw81_64/lib/cmake")
+  set (CMAKE_PREFIX_PATH "C:/Qt/5.15.2/mingw81_64/lib/cmake")
+endif ()
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(JACK REQUIRED IMPORTED_TARGET jack)
 endif ()
 
 # Find includes in corresponding build directories
@@ -69,15 +74,12 @@ add_compile_definitions(WAIRTOHUB)
 add_executable(qjacktrip ${qjacktrip_SRC})
 
 # Use the Widgets module from Qt 5.
-if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-  target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network /usr/lib/x86_64-linux-gnu/libjack.so)
-elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network /usr/local/lib/libjack.dylib)
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network PkgConfig::JACK)
+  add_custom_target(create_symlink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink qjacktrip jacktrip)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network "C:/Program Files/JACK2/lib/libjack64.lib" ws2_32)
 endif ()
-
-add_custom_target(create_symlink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink qjacktrip jacktrip)
 
 # Install the executable
 install(TARGETS qjacktrip DESTINATION bin)
